--- a/android/src/main/res/layout/image_colors_button.xml
+++ b/android/src/main/res/layout/image_colors_button.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="  B/W  "
+        android:text="@string/black"
         android:textSize="14sp" />
 
 </LinearLayout>
